<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nikkialonzo.grabahand.Introduction">

    <TextView
        android:text="@string/Phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView6"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:text="@string/Email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView11"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:text="@string/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_alignStart="@+id/textView13"
        android:layout_marginTop="27dp"
        android:id="@+id/textView18"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:text="@string/Please_fill_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:id="@+id/textView"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/textView2"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:text="@string/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView19"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_below="@+id/textView18"
        android:layout_alignStart="@+id/textView18" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_above="@+id/editText2"
        android:layout_toEndOf="@+id/textView13"
        android:id="@+id/editText3" />

    <TextView
        android:text="@string/Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView20"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/textView12"
        android:layout_marginTop="13dp"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:text="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText6"
        android:layout_alignStart="@+id/textView19"
        android:layout_marginTop="13dp"
        android:id="@+id/textView21"
        android:textAppearance="@android:style/TextAppearance" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_alignBottom="@+id/textView18"
        android:layout_toEndOf="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_alignBaseline="@+id/textView19"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignStart="@+id/editText5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText8"
        android:layout_below="@+id/editText6"
        android:layout_alignStart="@+id/editText6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_above="@+id/editText5"
        android:layout_alignStart="@+id/editText5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignStart="@+id/editText4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_above="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText7"
        android:layout_alignBaseline="@+id/textView20"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignStart="@+id/editText" />

    <TextView
        android:text="@string/contact_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/editText7"
        android:layout_alignStart="@+id/textView11" />

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/textView13"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_below="@+id/textView12"
        android:layout_alignStart="@+id/textView12" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/signup"
        android:id="@+id/SU"
        style="@android:style/Widget.ImageButton"
        android:contentDescription="@android:string/ok"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
