<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nikkialonzo.grabahand.Introduction">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:text="@string/Phone_number"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="22dp"
        android:text="@string/Email_address"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView13"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="27dp"
        android:text="@string/phone_number"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:text="@string/Please_fill_up"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="19dp"
        android:text="@string/Name"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignStart="@+id/textView18"
        android:layout_below="@+id/textView18"
        android:layout_marginTop="22dp"
        android:text="@string/email_address"
        android:textAppearance="@android:style/TextAppearance" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtPhone"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignStart="@+id/edtPhone" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/edtEmail"
        android:layout_marginTop="13dp"
        android:text="@string/Address"
        android:textAppearance="@android:style/TextAppearance" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView19"
        android:layout_below="@+id/edtContactPersonEmail"
        android:layout_marginTop="13dp"
        android:text="@string/address"
        android:textAppearance="@android:style/TextAppearance" />

    <EditText
        android:id="@+id/edtContactPersonPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView18"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edtContactPersonEmail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignBaseline="@+id/textView19"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignStart="@+id/edtContactPersonPhone"
        android:ems="10"
        android:enabled="false"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtContactPersonAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edtContactPersonEmail"
        android:layout_below="@+id/edtContactPersonEmail"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/edtContactPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtContactPersonPhone"
        android:layout_alignStart="@+id/edtContactPersonPhone"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignStart="@+id/edtContactPersonName"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtEmail"
        android:layout_alignStart="@+id/edtEmail"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView20"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignStart="@+id/edtEmail"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/edtAddress"
        android:layout_marginTop="17dp"
        android:text="@string/contact_person"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="31dp"
        android:text="@string/name"
        android:textAppearance="@android:style/TextAppearance" />


    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button"
        android:text="Update Settings"
        android:textColor="#FFFFFF" />

</RelativeLayout>
