<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nikkialonzo.grabahand.Buttons">

    <ImageButton
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:srcCompat="@android:color/transparent"
        android:id="@+id/imageButton4"
        android:background="@mipmap/pnew"
        android:contentDescription="@string/police"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageButton7"
        android:layout_marginBottom="149dp" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@android:color/transparent"
        android:layout_marginStart="36dp"
        android:id="@+id/imageButton5"
        android:contentDescription="@string/firestation"
        android:background="@mipmap/fire"
        android:layout_alignTop="@+id/imageButton7"
        android:layout_toEndOf="@+id/imageButton7" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@android:color/transparent"
        android:id="@+id/imageButton6"
        android:background="@mipmap/mechanic"
        android:contentDescription="@string/mechanic"
        android:layout_alignTop="@+id/imageButton4"
        android:layout_alignStart="@+id/imageButton5" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@android:color/transparent"
        android:id="@+id/imageButton7"
        android:background="@mipmap/hospital"
        android:contentDescription="@string/hospital"
        android:layout_marginStart="51dp"
        android:layout_marginBottom="13dp"
        android:layout_above="@+id/imageButton4"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/settings"
        android:id="@+id/imageButton8"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp" />
</RelativeLayout>
