<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_f_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nikkialonzo.grabahand.fButton">

    <TextView
        android:text="@string/you_have_sent_an_alert_reuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp"
        android:id="@+id/textView9"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:text="@string/to_the_nearest_fire_station"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:text="@string/firetruck_is_coming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/back"
        android:layout_below="@+id/textView14"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:id="@+id/imageButtonf"
        android:background="@android:color/transparent" />
</RelativeLayout>
